--- a/tools/install/deb/changelog
+++ b/tools/install/deb/changelog
@@ -4,6 +4,7 @@ vsmtp (x.y.z) UNRELEASED; urgency=low
 
 * Fixed
   * Display proper configuration errors. (#926)
+  * Building without `.git` no longer causes a hard failure
 
  -- ltabis <l.tabis@viridit.com>  Mon, 09 Jan 2023 21:52:36 +0100
 
